fixed bug that hero needs extra padding in header

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -2,28 +2,31 @@
 @import "layout.scss";
 @import "variables.scss";
 
-.Header {
-  position: fixed;
-  width: 100%;
-  z-index: 3;
-  padding: 40px 0;
-  // for scroll
-  transition: $trans-hover;
-}
-
 .HeaderGroup {
   max-width: 300px;
   float: right;
   margin-right: $page-margin;
   // margin-right: calc(#{$page-margin}*2);
-  height: 20px;
+  // height: 20px;
+}
+
+.Header {
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+  // background-color: red;
+  padding: 30px 0;
+  // for scroll
+  transition: $trans-hover;
+  top: 0;
 }
 
 
 .Header a {
   text-decoration: none;
-  color: black;
   padding-right: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .Header a:last-child {
@@ -36,9 +39,10 @@
 
 
 .Header {
- 
 }
+
 .HeaderScrolled {
   background: $bg-color;
   padding: 40px 0 30px 0;
+  transition: $trans-hover;
 }
