--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -8,12 +8,9 @@
   
   .Hero h1 {
     font-family: 'Open Sans', sans-serif;
-    padding-top:40px;
     font-size: 50px;
     font-weight: 800;
     line-height: 1.2;
-    padding-bottom: 0;
-    margin-top:0;
   }
   
   
